Revert Java 17 constructs